fix: mobile styling of status bars, no longer overlap

--- a/packages/micro-journeys/src/one-character-layout.scss
+++ b/packages/micro-journeys/src/one-character-layout.scss
@@ -1,6 +1,12 @@
+@import "@bolt/core";
+
 .c-bolt-one-character-layout {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  margin: 80px 0; // This margin is needed to accommodate speech bubbles that are absolute positioned around characters
+  margin: 110px 0; // This margin is needed to accommodate speech bubbles that are absolute positioned around characters
+
+  @include bolt-mq(small) {
+    margin: 90px 0; // This margin is needed to accommodate speech bubbles that are absolute positioned around characters
+  }
 }
