--- a/packages/micro-journeys/src/two-character-layout.scss
+++ b/packages/micro-journeys/src/two-character-layout.scss
@@ -1,9 +1,15 @@
+@import '@bolt/core';
+
 .c-bolt-two-character-layout {
   &__character-row {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin: 80px 0; // This margin is needed to accommodate speech bubbles that are absolute positioned around characters
+    margin: 90px 0; // This margin is needed to accommodate speech bubbles that are absolute positioned around characters
+
+    @include bolt-mq(small) {
+      margin: 110px 0; // This margin is needed to accommodate speech bubbles that are absolute positioned around characters
+    }
   }
 
   &__character {
